# llmjj

./: README.md  main.py  pyproject.toml
conf/: base.yaml  helpfulness.yaml  query_doc_helpfulness.yaml
notebooks/: msmarco_relevance.ipynb
src/llmjj/: dataset.py  prompt_builder.py  relevance_eval.py  text_generation.py
tests/: test_prompt_builder.py
